# visuo_llm_ram_rescue

./: .gitignore  README.md  pyproject.toml  requirements-rocm-searchlight.txt  setup.cfg
lucas_exploration/: VAE.py  beta_vae_nsd.py  betavae_nsd_embeddings.py  coco_embeddings.ipynb  download_blt_mpnet_weights.py  get_embeddings.ipynb  llm_encoding_model.ipynb  pixel_nsd_embeddings.py  run_searchlight_mpnet.py  run_tf_correlation.py  run_tf_searchlight.py  searchlight.ipynb  stable_diffusion_vae_embeddings.ipynb
scripts/: rocm_python.sh  rocm_tf_env.sh  setup_rocm_tf_searchlight.sh
src/nsd_visuo_semantics/: __init__.py
src/nsd_visuo_semantics/encoding_decoding_analyses/: nsd_llm_encoding_model.py
src/nsd_visuo_semantics/get_embeddings/: embedding_models_zoo.py  get_nsd_allWord_embeddings_simple.py  get_nsd_category_embeddings_simple.py  get_nsd_noun_embeddings_simple.py  get_nsd_sentence_embeddings_categories_simple.py  get_nsd_sentence_embeddings_simple.py  get_nsd_verb_embeddings_simple.py
src/nsd_visuo_semantics/searchlight_analyses/: nsd_project_fsaverage.py  nsd_searchlight_main_tf.py  tf_searchlight.py
src/nsd_visuo_semantics/utils/: __init__.py  download_nsd_visuo_semantics.py  get_name2file_dict.py  nsd_get_data_light.py  nsd_prepare_modelrdms.py  py_plot_brain_utils.py
